test/files/neg/t8035-no-adapted-args.check
t8035-no-adapted-args.scala:4: warning: No automatic adaptation here: use explicit parentheses.
        signature: Test.f[T](x: T): Int
  given arguments: 1, 2, 3
 after adaptation: Test.f((1, 2, 3): (Int, Int, Int))
  f(1, 2, 3)
   ^
t8035-no-adapted-args.scala:4: error: too many arguments (3) for method f: (x: (Int, Int, Int))Int
  f(1, 2, 3)
       ^
t8035-no-adapted-args.scala:5: warning: No automatic adaptation here: use explicit parentheses.
        signature: Test.f[T](x: T): Int
  given arguments: <none>
 after adaptation: Test.f((): Unit)
  f()
   ^
t8035-no-adapted-args.scala:5: error: not enough arguments for method f: (x: Unit)Int.
Unspecified value parameter x.
  f()
   ^
two warnings found
two errors found
